--- a/index.html
+++ b/index.html
@@ -1,11 +1,82 @@
 <!DOCTYPE html>
-<html>
- <head>
-  <title>Home</title>
- </head>
- 
- <body>
-  <h1>Welcome</h1>
-  <p>This is my first page.</p>
- </body>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="keywords" content="創作,開發,賴天應,Digitgeek,賴老師課後研習營,電腦教學,Python,機器學習,數據分析,WPonit,W.Point,">
+  <meta name="description" content="I am a passionate teacher specializing in machine learning and data analysis。">
+  <title>關於我 | About Me</title>
+  <style>
+    body {
+      background-color: #121212;
+      color: #ffffff;
+      font-family: "Microsoft JhengHei", Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      line-height: 1.6;
+    }
+
+    h1 {
+      text-align: center;
+      margin: 20px 0;
+      font-family: "Microsoft JhengHei", serif;
+    }
+
+    .container {
+      max-width: 800px;
+      margin: 40px auto;
+      padding: 20px;
+      background-color: #1e1e1e;
+      border-radius: 12px;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
+    }
+
+    .section {
+      margin-bottom: 40px;
+    }
+
+    .section h2 {
+      border-bottom: 2px solid #444;
+      padding-bottom: 10px;
+      font-family: "Microsoft JhengHei", serif;
+    }
+
+    .section p {
+      margin: 10px 0;
+      font-family: "Arial", sans-serif;
+    }
+
+    .chinese p {
+      font-family: "Microsoft JhengHei", sans-serif;
+    }
+
+    .signature {
+      text-align: right;
+      font-style: italic;
+      margin-top: 40px;
+      font-family: "Microsoft JhengHei", cursive;
+    }
+  </style>
+</head>
+<body>
+  <div class="container">
+    <h1>關於我 About Me</h1>
+
+    <div class="section chinese">
+      <h2>中文</h2>
+      <p>我是一名熱愛教學的老師，專精於機器學習與數據分析，同時也喜歡透過繪畫表達創意。身為一名教書匠，我致力於將複雜的知識轉化為易於理解的內容，讓學生們能在學習中感受到興趣與成就感。</p>
+      <p>我的程式之路始於國中時期，那時我對電腦程式產生了濃厚的興趣，從此展開了與程式語言的探索之旅。多年來，這份熱情不僅促使我持續精進技術，更讓我在教學中充滿熱誠，樂於與學生分享程式世界的美妙。</p>
+      <p>生活中，我是一個樂觀開朗、樂於結交朋友的人。輕音樂是我的靈感來源，讓我在繁忙的工作之餘，找到平靜與創作的能量。我相信交流與合作是進步的關鍵，因此非常歡迎來信交流指導，期待與更多志同道合的朋友一起成長進步！</p>
+    </div>
+
+    <div class="section">
+      <h2>English</h2>
+      <p>I am a passionate teacher specializing in machine learning and data analysis, with a love for expressing creativity through art. As an educator, I strive to transform complex knowledge into easily digestible content, ensuring that students find both joy and a sense of achievement in their learning journey.</p>
+      <p>My programming journey began in middle school when I developed a deep fascination with computer programming. This curiosity sparked a lifelong exploration of programming languages. Over the years, this passion has not only driven me to continuously refine my skills but has also infused my teaching with enthusiasm as I eagerly share the wonders of the programming world with my students.</p>
+      <p>In my personal life, I am an optimistic and outgoing individual who enjoys making new friends. Light music serves as my source of inspiration, helping me find peace and creative energy amidst a busy schedule. I firmly believe that communication and collaboration are key to progress, and I warmly welcome opportunities for exchange and guidance. I look forward to growing and advancing alongside like-minded peers!</p>
+    </div>
+
+    <div class="signature">賴天應 (Digitgeek lai)</div>
+  </div>
+</body>
 </html>
