--- a/wpoint/index.html
+++ b/wpoint/index.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="keywords" content="創作,開發,賴天應,Digitgeek,賴老師課後研習營,電腦教學,Python,機器學習,數據分析,WPonit,W.Point">
+  <meta name="description" content="I am a passionate teacher specializing in machine learning and data analysis。">  
   <title>W.Point</title>
   <style>
     /* 全局樣式 */
@@ -76,43 +78,35 @@
     <div class="logo">
       <img src="./WPoint_logo.png" alt="W.Point Logo">
     </div>
-    <p><a href="./PRIVACY.md">Privacy Policy</a></p>
+    <p><a href="./privacy.html">W.Point Privacy Policy</a></p>
 
     <div class="section">
-      <h2>English</h2>
-      <p>W.Point is crafted on the robust Chromium framework, delivering unparalleled performance and stability.</p>
-      <p>Engineered with a commitment to security and user-centric simplicity, it ensures a safe, malware-free browsing experience.</p>
-      <p>With intuitive navigation and a one-click history-clearing feature, W.Point safeguards your privacy by leaving no traces.</p>
+      <h2>Introduction in English</h2>
+      <p>W.Point is crafted on the robust Chromium framework, delivering unparalleled performance and stability. Engineered with a commitment to security and user-centric simplicity, it ensures a safe, malware-free browsing experience. With intuitive navigation and a one-click history-clearing feature, W.Point safeguards your privacy by leaving no traces. Whether for everyday tasks or specialized needs, W.Point offers reliability and peace of mind.</p>
       <p>Looking ahead, W.Point is dedicated to advancing education and fostering programming skills. Future updates will integrate cutting-edge tools such as HTML editors, C/C++ development platforms, and Python scripting environments, empowering developers with comprehensive, browser-based solutions.</p>
     </div>
 
     <div class="divider"></div>
 
     <div class="section">
-      <h2>中文</h2>
-      <p>W.Point 基於強大的 Chromium 框架精心打造，提供卓越的性能與穩定性。</p>
-      <p>我們秉持安全與簡潔的設計理念，確保用戶獲得無蠕蟲及惡意軟體的瀏覽體驗。</p>
-      <p>用戶可輕鬆操作，並通過一鍵清除瀏覽歷史，全面保障隱私，讓痕跡無處可循。</p>
+      <h2>中文介紹</h2>
+      <p>W.Point 基於強大的 Chromium 框架精心打造，提供卓越的性能與穩定性。我們禡持安全與簡潔的設計理念，確保用戶獲得無蛇蟲及惡意軟體的瀏覽體驗。用戶可輕鬆操作，並通過一鍵清除瀏覽歷史，全面保障隱私，讓痕跡無處可尋。無論是日常使用還是特定需求，W.Point 都能帶來可靠與安心的使用體驗。</p>
       <p>未來，W.Point 將專注於教育推廣及程式技能的提升。我們計劃引入 HTML 編輯器、C/C++ 開發平台及 Python 腳本編輯等創新功能，為開發者提供全面的瀏覽器內嵌解決方案。</p>
     </div>
 
     <div class="divider"></div>
 
     <div class="section">
-      <h2>Русский</h2>
-      <p>W.Point создан на основе мощной платформы Chromium, обеспечивая исключительную производительность и стабильность.</p>
-      <p>Программа ориентирована на безопасность и простоту, гарантируя безопасный просмотр без вредоносного ПО.</p>
-      <p>Интуитивно понятный интерфейс и функция очистки истории в один клик защищают вашу конфиденциальность, не оставляя следов.</p>
+      <h2>Русская версия описания</h2>
+      <p>W.Point создан на основе мощной платформы Chromium, обеспечивая исключительную производительность и стабильность. Программа ориентирована на безопасность и простоту, гарантируя безопасный просмотр без вредоносного ПО. Интуитивно понятный интерфейс и функция очистки истории в один клик защищают вашу конфиденциальность, не оставляя следов. Для повседневного использования или специализированных задач W.Point обеспечивает надежность и комфорт.</p>
       <p>В будущем W.Point сосредоточится на образовательных проектах и продвижении навыков программирования. Будущие обновления включат интегрированные инструменты, такие как редакторы HTML, платформы для разработки C/C++ и среды для написания скриптов Python, предоставляя разработчикам широкий спектр возможностей прямо в браузере.</p>
     </div>
 
     <div class="divider"></div>
 
     <div class="section">
-      <h2>Français</h2>
-      <p>W.Point repose sur la solide infrastructure de Chromium, offrant des performances et une stabilité inégalées.</p>
-      <p>Conçu pour allier sécurité et simplicité, il garantit une navigation sûre, sans logiciels malveillants.</p>
-      <p>Grâce à une navigation intuitive et une fonctionnalité de suppression d'historique en un clic, W.Point protège votre vie privée en ne laissant aucune trace.</p>
+      <h2>Description en français</h2>
+      <p>W.Point repose sur la solide infrastructure de Chromium, offrant des performances et une stabilité inégalées. Conçu pour allier sécurité et simplicité, il garantit une navigation sûre, sans logiciels malveillants. Grâce à une navigation intuitive et une fonctionnalité de suppression d'historique en un clic, W.Point protège votre vie privée en ne laissant aucune trace. Que ce soit pour une utilisation quotidienne ou des besoins spécifiques, W.Point assure fiabilité et tranquillité d'esprit.</p>
       <p>À l'avenir, W.Point se consacrera à l'éducation et à la promotion de la programmation. Les futures mises à jour intégreront des outils innovants tels qu'un éditeur HTML, des plateformes de développement C/C++ et un environnement de script Python, offrant aux développeurs des solutions complètes directement dans le navigateur.</p>
     </div>
   </div>
